[package]
name = "pdf_to_text"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
image = "0.25"
imageproc = "0.24"
rayon = "1.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tesseract = "0.13.0"
tokio = { version = "1", features = ["full"] }
